if i only had a brain

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <title>CSS Colors Exercise</title>
 </head>
 <body>
-    <h1>Somewhere</h1>
-    <h2>Over</h2>
-    <h3>The</h3>
-    <h4>Rainbow</h4>
-    <h5>Way</h5>
-    <h6>Up</h6>
+    <h1 class="red">Somewhere</h1>
+    <h2 class="orange">Over</h2>
+    <h3 class="yellow">The</h3>
+    <h4 class="green">Rainbow</h4>
+    <h5 class="blue">Way</h5>
+    <h6 class="indigo">Up</h6>
     <div>
-    <p>High</p>
+    <p class="violet">High</p>
     <ol>
-        <li class="hotPink">One</li>
+        <li id="hotPink">One</li>
         <li>Two</li>
-        <li>Three</li>
+        <li id="peachPuff">Three</li>
     </ol>
     </div>
 </body>
